@startuml TodoApp

namespace TodoApp.Domain.Notificacoes {
    class Notificacao {
        +Tipo: TipoNotificacao
        +Mensagem: string

        +Notificacao(TipoNotificacao, string)
    }

    class Notificador <<INotificador>> {
        +Notificacoes: List<Notificacao>
        +PossuiErros: bool

        +Notificador()
        +Adicionar(Notificacao)
    }

    enum TipoNotificacao {
        Informacao = 1
        Erro = 2
    }

    Notificador -- Notificacao
    Notificacao -- TipoNotificacao
}

@enduml